# bellande_functionality_api

./: README.md
docker/: Dockerfile.ros1  Dockerfile.ros2
ros_web_api_bellande_2d_computer_vision/: CMakeLists.txt  package.xml  setup.py
ros_web_api_bellande_3d_computer_vision/: CMakeLists.txt  package.xml  setup.py
ros_web_api_bellande_adaptive_alternate_path_creation/: CMakeLists.txt  package.xml
ros_web_api_bellande_adaptive_continuious_control_system/: CMakeLists.txt  package.xml  setup.py
ros_web_api_bellande_adaptive_continuious_controller/: CMakeLists.txt  package.xml  setup.py
ros_web_api_bellande_ai_system/: CMakeLists.txt  package.xml  setup.py
ros_web_api_bellande_extremum_optimization/: CMakeLists.txt  package.xml
ros_web_api_bellande_motion_probabilistic/: CMakeLists.txt  package.xml
ros_web_api_bellande_search_path/: CMakeLists.txt  package.xml
ros_web_api_bellande_speech_detection/: CMakeLists.txt  package.xml  setup.py
ros_web_api_bellande_step/: CMakeLists.txt  package.xml
ros_web_api_bellande_step/config/: configs.json
ros_web_api_bellande_step/launch/: bellande_step_api_2d.launch.py
ros_web_api_bellande_step/launch/ros1/: bellande_step_api_2d.launch
ros_web_api_bellande_step/src/: bellande_step_api_2d.py
scripts/: .gitignore  build_docker.sh  catkin_setup.sh  colcon_setup.sh
web_api_bellande_2d_computer_vision/: CMakeLists.txt  package.xml  setup.py
web_api_bellande_3d_computer_vision/: CMakeLists.txt  package.xml  setup.py
web_api_bellande_adaptive_alternate_path_creation/: CMakeLists.txt  package.xml
(+118 files in other folders)
